fix: Added a home screen scrollbar to the streaming carousel.

--- a/opinions-front/src/App.css
+++ b/opinions-front/src/App.css
@@ -3,7 +3,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #181818;
+  background-color: #c2c2c2;
   border-radius: 12px;
 }
 
@@ -12,5 +12,5 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 body::-webkit-scrollbar-track {
-  background-color: #F2F2F2;
+  background-color: #000000;
 }
