--- a/opinions-front/src/components/header/Header.css
+++ b/opinions-front/src/components/header/Header.css
@@ -4,7 +4,7 @@
   margin-bottom: 20px;
   background-color: #5cb8e4;
   justify-content: center;
-  box-shadow: 0px -10px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.493);
   z-index: 2;
 }
 
